--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
-    //подключаем JQuery
+    <!-- подключаем JQuery -->
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-	//подключаем Axios
+	<!-- подключаем Axios-->
 	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-	//подключаем superagent
+	<!-- подключаем superagent-->
     <script src="https://cdn.jsdelivr.net/npm/superagent"></script>
 </head>
 <body>    
